# syncb

./: .gitignore  Project.toml  install.sh  install_sync.sh  install_syncb.sh  julia (version descartada, no terminada).7z  promps_conv_ia.org  rust  (version descartada, no terminada).7z  sync_bidireccional.sh  sync_bidireccional_directorios.ini  sync_bidireccional_directorios_feynman.rtva.dnf.ini  sync_bidireccional_exclusiones.ini  sync_bidireccional_readme.org  syncb.jl  syncb.py  syncb.sh  syncb.toml  syncb_config.toml  syncb_crypto.sh  syncb_directorios.ini  syncb_directorios_feynman.rtva.dnf.ini  syncb_exclusiones.ini  syncb_readme.org
0Versiones_anteriores/python_20250927_OK/: Readme.org
0Versiones_anteriores/rust_V20251015/: Cargo.toml  README.md
bash/: syncb.sh  syncb_directorios.ini  syncb_directorios_feynman.rtva.dnf.ini  syncb_exclusiones.ini
julia/: Licencia.txt  Manifest.toml  Project.toml  Readme.md  ejemplos.sh  estructura.txt  syncb_config.toml  uso.sh
julia/SyncB/: .gitignore  LICENSE  Manifest.toml  Project.toml  Readme.org
julia/SyncB/config/: syncb_config.toml
julia/src/: syncb.jl
julia/test/: test_syncb.jl
python/: .gitignore  Licencia.txt  Readme.md  deepseek_bash_20251101_2d8dbd.sh  deepseek_bash_20251101_3d20c4.sh  deepseek_bash_20251101_698f6f.sh  deepseek_bash_20251101_bf8978.sh  deepseek_bash_20251101_cd4408.sh  deepseek_text_20251101_19ea88.txt  deepseek_text_20251101_ed6391.txt  syncb.py  syncb_config.toml
rust/: .gitignore  .tags  Cargo.toml  Licencia.txt  Readme.md  config.toml  deepseek_bash_20251101_3f3a31.sh  deepseek_bash_20251101_7c67d9.sh  deepseek_text_20251101_5593f9.txt  estructura.txt  sync.ini
rust/src/: args.rs  cli.rs  config.rs  crypto.rs  error.rs  links.rs  links1.rs  lock.rs  logging.rs  main.rs  stats.rs  sync.rs  utils.rs
rust/tests/: integration_tests.rs
(+25 files in other folders)
