[package]
name = "sync"
version = "0.1.1"
edition = "2018"
authors = ["J.Heras <jherasm@gmail.com>"]
description = "sincroniza directorios"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"
fslock = "0.1.6"
