[package]
name = "syncb-rs"
version = "1.0.0"
edition = "2021"
authors = ["Tu Nombre"]
description = "Sincronización bidireccional entre directorio local y pCloud Drive"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.29"
notify-rust = "4.8"
dirs = "5.0"
users = "0.11"
fs2 = "0.4"
walkdir = "2.4"
glob = "0.3"
lazy_static = "1.4"
regex = "1.10"
humantime = "2.1"
bytesize = "1.3"
indicatif = "0.17"
crossbeam = "0.8"
signal-hook = "0.3"
nix = "0.27"
tokio = "1.48.0"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
