[package]
name = "syncb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
fs-extra = "1.3"
glob = "0.3"
users = "0.11"
notify-rust = "4.8"
signal-hook = "0.3"
nix = "0.26"
hostname = "0.3"
whoami = "1.4"
tempfile = "3.8"